# pycodon_analyzer

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/pycodon_analyzer/: .gitignore  __init__.py  analysis.py  cli.py  extraction.py  io.py  plotting.py  reporting.py  utils.py
src/pycodon_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/pycodon_analyzer/templates/: base_template.html  combined_ca_page_template.html  correlation_heatmaps_page_template.html  gene_aggregates_page_template.html  index_page_template.html  metadata_plots_page_template.html  per_gene_rscu_page_template.html  sequence_metrics_page_template.html  statistical_comparisons_page_template.html
tests/: conftest.py  test_analysis.py  test_cli.py  test_io.py  test_plotting.py  test_utils.py
tests/data/: dummy_ref_bad.tsv  dummy_ref_ok.tsv  sample_gene_A.fasta  sample_gene_B.fasta
